# research

./: .dockerignore  .gitignore  .shellcheckrc  41414141.icc.txt  ANALYSIS_SUMMARY.md  CALLGRAPH_EXAMINATION_INDEX.md  CALLGRAPH_INFRASTRUCTURE_ANALYSIS.md  Dockerfile  Dockerfile.demo  Dockerfile.instrumented  FUZZ_CFL_INVENTORY.md  ICCANALYZER_LITE_ANALYSIS.md  ICCANALYZER_LITE_FINDINGS_SUMMARY.txt  ICC_PROFILE_ANALYSIS.md  ICC_PROFILE_ANALYSIS_REPORT.md  ICC_PROFILE_SECURITY_ANALYSIS.md  ICC_QUICK_REFERENCE.txt  INDEX.md  README.md  START_HERE.md  TIFFIMG_ANALYSIS_INDEX.md  TIFFIMG_COMPLETE_ANALYSIS.md  TIFFIMG_FINAL_CHECKLIST.txt  TIFFIMG_QUICK_REFERENCE.txt  TIFF_FUZZER_COMPREHENSIVE_ANALYSIS.md  add.txt  analyze-profile.sh  command-lines.md  commit-to-kknowledge-icc-documentation.txt  crash-03c995445cdbfe1dd013ba779c40f01006d96e9e  crash-3741ab3832437d29b96592fb2624d07367740893  crash-7dd85cf499f0fc5553cfc69a199835fa985777a3  crash-ddd475988033f43dea3bb62ad3d6842ee525338b  crash-e130055931f00b2bdff2ec6151d7bdbe88ef1ac9  crash-hbo-CTiffImg-WriteLine-TiffImg_cpp-Line411.raw  hbo-CIccCalculatorFunc-ApplySequence-IccMpeCalc_cpp-Line3715.icc.1  hbo-icMemDump-IccUtil_cpp-Line1002.icc  icc_profile_fuzzer.dict  leak-473119e41b7beea2aa125d25fc6c3d94018e3f76  oom-442f59c9478c618234a29a3c3e7dbeaa91c0d235  (+19 more)
cfl/: CMakeLists.txt  CflSafeDescribe.h  Dockerfile  README.md  build.sh  codeql-config.yml  fuzz-local.sh  fuzz_utils.h  fuzzer.options  icc.dict  iccApplyProfiles-callgraph.py  iccApplyToLink-callgraph.py  iccDumpProfile-callgraph.py  iccFromXml-callgraph.py  iccRoundTrip-callgraph.py  iccTiffDump-callgraph.py  iccToXml-callgraph.py  icc_apply_fuzzer.cpp  icc_apply_fuzzer.dict  icc_apply_fuzzer.options  icc_applynamedcmm_fuzzer.cpp  icc_applynamedcmm_fuzzer.dict  icc_applynamedcmm_fuzzer.options  icc_applyprofiles_fuzzer.cpp  icc_applyprofiles_fuzzer.dict  icc_applyprofiles_fuzzer.options  icc_applysearch_fuzzer.cpp  icc_applysearch_fuzzer.dict  icc_calculator_fuzzer.cpp  icc_calculator_fuzzer.dict  icc_calculator_fuzzer.options  icc_core.dict  icc_deep_dump_fuzzer.cpp  icc_deep_dump_fuzzer.dict  icc_dump_fuzzer.cpp  icc_dump_fuzzer.dict  icc_fromcube_fuzzer.cpp  icc_fromcube_fuzzer.dict  icc_fromcube_fuzzer.options  icc_fromxml_fuzzer.cpp  (+47 more)
cfl/codeql-queries/: all-tools-enum-reachability.ql  alloc-dealloc-mismatch.ql  argv-output-path.ql  buffer-overflow.ql  codeql-pack.lock.yml  enum-undefined-behavior.ql  icc-tag-cstyle-cast.ql  iccanalyzer-security.ql  iccdumpprofile-enum-reachability.ql  injection-attacks.ql  integer-overflow-allocation.ql  integer-overflow-multiply.ql  qlpack.yml  security-research-suite.qls  signed-shift-overflow.ql  type-confusion.ql  unaligned-pointer-cast.ql  unchecked-io-return.ql  unsafe-array-new.ql  unsafe-scalar-new.ql  use-after-free.ql  xml-all-attacks.ql  xml-external-entity-attacks.ql
cfl/corpus-icc_apply_fuzzer/: BlacklightPoster_202143.icc  seed-pcsxform-display-lab.icc
cfl/corpus-icc_applyprofiles_fuzzer/: seed_camera_lab.icc  seed_rec2020_16bit_gray.icc  seed_rec2100_d2bx_v5sub.icc  seed_srgb_16bit_lab.icc  seed_srgb_32bit_lab.icc  seed_srgb_32bit_rgb.icc  seed_srgb_8bit_rgb.icc  seed_srgb_allflags.icc  seed_srgb_embed_bpc.icc  seed_srgb_minisblack_lum.icc  seed_srgb_miniswhite.icc
cfl/corpus-icc_deep_dump_fuzzer/: CMYK-3DLUTs2.icc  seed-pcsxform-lab-link.icc  seed_doxygen_display_graygsdf.icc  seed_doxygen_namedcolor.icc  seed_doxygen_pcc_cam.icc
cfl/corpus-icc_dump_fuzzer/: seed_doxygen_display_rec2020_spectral.icc  seed_doxygen_fluorescent_named.icc
cfl/corpus-icc_fromcube_fuzzer/: all_channels_same_custom_2x2x2.cube  all_negative_data_2x2x2.cube  cinema_17x17x17.cube  custom_domain_3x3x3.cube  domain_with_input_range_2x2x2.cube  dot_prefix_values_2x2x2.cube  edge_lut_1x1x1.cube  extended_range_2x2x2.cube  identity_2x2x2.cube  incomplete_row_3x3x3.cube  input_range_custom_3x3x3.cube  input_range_single_value_2x2x2.cube  input_range_video_5x5x5.cube  large_lut_33x33x33.cube  lut_1d_size_correct_case.cube  mixed_keywords_order_3x3x3.cube  multi_title_blank_lines_2x2x2.cube  multi_title_comments.cube  negative_domain_3x3x3.cube  negative_lut_values_2x2x2.cube  per_channel_domain_4x4x4.cube  quoted_title_3x3x3.cube  skia_grid_lut_4x4x4.cube  video_range_2x2x2.cube  wide_gamut_bt2020_3x3x3.cube
cfl/corpus-icc_fromxml_fuzzer/: empty_tag.xml  seed-array-struct-many.xml  seed-nested-struct-deep.xml  ub-nan-outside-range-unsigned-int-IccUtilXml_cpp-Line1044.xml
cfl/corpus-icc_io_fuzzer/: io_Rec2100HlgFull.icc  io_sRGB_D65_MAT.icc
cfl/corpus-icc_link_fuzzer/: GrayGSDF.icc  heap-buffer-overflow-CIccMpeCalculatorRead-IccProfLibIccMpeCalc_cpp-Line4677.icc  seed-ownership-badintent.icc  seed-ownership-edge.icc
cfl/corpus-icc_profile_fuzzer/: seed-pcsxform-xyz-abstract.icc
cfl/corpus-icc_specsep_fuzzer/: seed_1ch.raw  seed_2ch_16bit_4x4.raw  seed_2ch_8bit_32x32.raw  seed_2ch_8bit_64x64.raw  seed_2ch_both.raw  (+12 more)
iccanalyzer-lite/: CMakeLists.txt  IccAnalyzerCallGraph.cpp  IccAnalyzerCallGraph.h  IccAnalyzerColors.h  IccAnalyzerCommon.h  IccAnalyzerComprehensive.cpp  IccAnalyzerComprehensive.h  IccAnalyzerConfig.cpp  IccAnalyzerConfig.h  IccAnalyzerErrors.cpp  IccAnalyzerErrors.h  IccAnalyzerHash.h  IccAnalyzerHeuristicTypes.h  IccAnalyzerHeuristics.h  IccAnalyzerInspect.cpp  IccAnalyzerInspect.h  IccAnalyzerJson.cpp  IccAnalyzerJson.h  IccAnalyzerLUT.cpp  IccAnalyzerLUT.h  IccAnalyzerNinja.cpp  IccAnalyzerNinja.h  IccAnalyzerPathValidation.cpp  IccAnalyzerProgress.h  IccAnalyzerReport.cpp  IccAnalyzerReport.h  IccAnalyzerSafeArithmetic.h  IccAnalyzerSecurity.cpp  IccAnalyzerSecurity.h  IccAnalyzerSignatures.cpp  IccAnalyzerSignatures.h  IccAnalyzerTagDetails.cpp  IccAnalyzerTagDetails.h  IccAnalyzerValidation.cpp  IccAnalyzerValidation.h  IccAnalyzerXMLExport.cpp  IccAnalyzerXMLExport.h  IccHeuristicsDataValidation.cpp  IccHeuristicsDataValidation.h  IccHeuristicsHeader.cpp  (+26 more)
mcp-server/: Dockerfile  README.md  build.sh  codeql-config.yml  icc_profile_mcp.py  index.html  pyproject.toml  requirements.txt  test_mcp.py  test_web_ui.py  web_ui.py
(+6971 files in other folders)
